# MyoFInDer

./: .gitignore  README.md  index.html  original.html  package-lock.json  package.json  requirements.txt
.github/workflows/: main.yml
myofinder_python/: image_segmentation.py  parrellism.py  simple.py  simple_parrellism.py  test.py
myofinder_python/tools/: __init__.py
remote-server/: image_segmentation.py  server.py  test.py  utils.py
src/: canvas-interaction.ts  canvasInteraction.ts  cardCanvasTable.ts  fileTable.ts  imageLayer.ts  layer-manager.ts  layer.ts  main.ts  markers.ts  styles.css
src-server/: image_segmentation.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: project_icon.icns
src-tauri/src/: _check_image.py  main.rs  server.py
src/back_end/: main.py
src/front_end/: canvasInteraction.ts  fileTable.ts  index.html  main.ts  styles.css  tableEntry.ts
test/: info.md
